ændring i footer margin på andre sidener end index

--- a/src/css/admin/admin.scss
+++ b/src/css/admin/admin.scss
@@ -52,3 +52,7 @@
     margin: 3% 5%;
   }
 }
+/*----------------------ændrer footeren på administrationssiden--------------------------*/
+#footer {
+  margin-top: 4%;
+}
