--- a/src/css/administration/administration.scss
+++ b/src/css/administration/administration.scss
@@ -104,6 +104,8 @@ main {
     font-size: 15px;
   }
 }
+
+/*----------------------ændrer footeren på administrationssiden--------------------------*/
 #footer {
   margin-top: 4%;
 }
