lille ændring i footer margin

--- a/src/css/kvitteringsside/kvitteringsside.scss
+++ b/src/css/kvitteringsside/kvitteringsside.scss
@@ -141,3 +141,7 @@ main {
     }
   }
 }
+/*----------------------ændrer footeren på administrationssiden--------------------------*/
+#footer {
+  margin-top: 4%;
+}
